--- a/style.css
+++ b/style.css
@@ -62,3 +62,39 @@ select {
       scroll-behavior: auto !important;
     }
   }
+
+  /* ------------------- */
+  /*   Utility Classes   */
+  /* ------------------- */
+
+.flex {
+    display: flex;
+    /* sets a default property, but also allows for use of a 
+    variable later on */
+    gap: var(--gap, 1rem)
+}
+
+.grid {
+    display: grid;
+    gap: var(--gap, 1rem)
+}
+
+.container {
+    /* newer CSS option for looking at the inline of the container */
+    padding-inline: 2em;
+    /* similar to padding replaces "0 auto" */
+    margin-inline: auto;
+    max-width: 80rem;
+}
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap; /* added line */
+    border: 0;
+}
