--- a/style.css
+++ b/style.css
@@ -1,4 +1,30 @@
 /* --------------------- */
+/* Custom Propperties */
+/* --------------------- */
+
+:root {
+    /* colors */
+    --clr-dark: 230 35% 7%;
+    --clr-light: 231 77% 90%;
+    --clr-white: 0 0% 100%;
+
+    /* font-sizes */
+    --fs-900: 9.375rem;
+    --fs-800: 6.25rem;
+    --fs-700: 3.5rem;
+    --fs-600: 2rem;
+    --fs-500: 1.75rem;
+    --fs-400: 1.125rem;
+    --fs-300: 1rem;
+    --fs-200: 0.875rem;
+
+    /* font-families */
+    --ff-serif: "Bellefair", serif;
+    --ff-sans-cond: "Barlow Condensed", sans-serif;
+    --ff-sans-normal: "Barlow", sans-serif;
+}
+
+/* --------------------- */
 /* RESET */
 /* --------------------- */
 
@@ -26,9 +52,24 @@ picture {
     margin: 0;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    font-weight: 400;
+}
+
+
 /* set up the body */
 
 body {
+    font-family: var(--ff-sans-normal);
+    font-size: var(--fs-400);
+    color: hsl(var(--clr-white));
+    background-color: hsl( var(--clr-dark));
     line-height: 1.5;
     min-height: 100vh;
 }
@@ -63,6 +104,8 @@ select {
     }
   }
 
+  /* GENERAL */
+
   /* ------------------- */
   /*   Utility Classes   */
   /* ------------------- */
@@ -87,6 +130,10 @@ select {
     max-width: 80rem;
 }
 
+/* setup for screen readers only */
+/* visually hides content unless being unless the person is using
+a screen reader */
+
 .sr-only {
     position: absolute;
     width: 1px;
@@ -97,4 +144,44 @@ select {
     clip: rect(0, 0, 0, 0);
     white-space: nowrap; /* added line */
     border: 0;
+}
+
+
+/* COLORS */
+
+.bg-dark {background-color: hsl( var(--clr-dark));}
+.bg-accent {background-color: hsl( var(--clr-light));}
+.bg-white {background-color: hsl( var(--clr-white));}
+
+.text-dark {color: hsl( var(--clr-dark));}
+.text-accent {color: hsl( var(--clr-light));}
+.text-white {color: hsl( var(--clr-white));}
+
+/* typography */
+
+.ff-serif { font-family: var(--ff-serif); } 
+.ff-sans-cond { font-family: var(--ff-sans-cond); } 
+.ff-sans-normal { font-family: var(--ff-sans-normal); } 
+
+.letter-spacing-1 { letter-spacing: 4.75px; } 
+.letter-spacing-2 { letter-spacing: 2.7px; } 
+.letter-spacing-3 { letter-spacing: 2.35px; } 
+
+.uppercase { text-transform: uppercase; }
+
+.fs-900 { font-size: var(--fs-900); }
+.fs-800 { font-size: var(--fs-800); }
+.fs-700 { font-size: var(--fs-700); }
+.fs-600 { font-size: var(--fs-600); }
+.fs-500 { font-size: var(--fs-500); }
+.fs-400 { font-size: var(--fs-400); }
+.fs-300 { font-size: var(--fs-300); }
+.fs-200 { font-size: var(--fs-200); }
+
+
+.fs-900,
+.fs-800,
+.fs-700,
+.fs-600 {
+    line-height: 1.1;
 }
