--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@
     --fs-300: 1rem;
     --fs-200: 0.875rem;
 
+    
+
     /* font-families */
     --ff-serif: "Bellefair", serif;
     --ff-sans-cond: "Barlow Condensed", sans-serif;
@@ -196,14 +198,32 @@ a screen reader */
     line-height: 1.1;
 }
 
+.numbered-title {
+    font-family: var(--ff-sans-cond);
+    font-size: var(--fs-500);
+    text-transform: uppercase;
+    letter-spacing: 4.72px;
+}
+
+.numbered-title span {
+    margin-right: .5em;
+    font-weight: 700;
+    color: hsl(var(--clr-white) /.25);
+}
+
 /* ------------------- */
 /*     Components      */
 /* ------------------- */
 
 .large-button {
+    position: relative;
     /* display grid because this is a link, which is an in-line element
     and height doesn't work the same and simplifies centering our text. */
     display: grid;
+    /* force new stacking context to be used with the pseduo element
+    keeps anything like a background image on the site from causing weird
+    issues later on */
+    z-index: 1;
     /* shorthand for alight-items/justify-items */
     place-items: center;
     padding: 0 2em;
@@ -212,4 +232,60 @@ a screen reader */
     it is width / height ration, but 1/1 is represented as just 1 */
     aspect-ratio: 1;
     text-decoration: none;
+}
+
+.large-button::after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background: hsl( var(--clr-white) / .15);
+    border-radius: inherit;
+    opacity: 0;
+    transition: opacity 750ms linear, transform 500ms ease-in-out;
+}
+
+.large-button:hover::after,
+.large-button:focus::after {
+    opacity: 1;
+    transform: scale(1.5);
+}
+
+.primary-navigation {
+    --gap: 8rem;
+    --underline-gap: 2rem;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+}
+
+.primary-navigation a {
+    text-decoration: none;
+}
+
+.primary-navigation a > span {
+    font-weight: 700;
+    margin-right: .5em;
+}
+
+/* selecting every direct descendent so that this can be used on other components */
+.underline-indicators > * {
+    padding: var(--underline-gap, 1rem) 0;
+    border-bottom: .2rem solid hsl( var(--clr-white) / 0 );
+}
+
+.underline-indicators > li:hover,
+/* .underline-indicators > a:hover, */
+/* .underline-indicators > span:hover, */
+/* .underline-indicators > span:focus, */
+/* .underline-indicators > a:focus, */
+.underline-indicators > li:focus {
+    border-bottom: .2rem solid hsl( var(--clr-white) / .5);
+}
+    
+
+.underline-indicators > li.active {
+    border-color: hsl( var(--clr-white) / 1);
 }
