--- a/style.css
+++ b/style.css
@@ -272,20 +272,73 @@ a screen reader */
 
 /* selecting every direct descendent so that this can be used on other components */
 .underline-indicators > * {
+    cursor: pointer;
     padding: var(--underline-gap, 1rem) 0;
+    /* removes any border that may exist before adding new borders
+    ---useful for removing borders on the buttons */
+    border: 0;
     border-bottom: .2rem solid hsl( var(--clr-white) / 0 );
 }
 
 .underline-indicators > li:hover,
+.underline-indicators > button:hover,
 /* .underline-indicators > a:hover, */
 /* .underline-indicators > span:hover, */
 /* .underline-indicators > span:focus, */
 /* .underline-indicators > a:focus, */
+.underline-indicators > button:focus, 
 .underline-indicators > li:focus {
     border-bottom: .2rem solid hsl( var(--clr-white) / .5);
 }
     
 
-.underline-indicators > li.active {
+.underline-indicators > li.active,
+.underline-indicators > [aria-selected="true"] {
+    color: hsl( var(--clr-white) / 1);
     border-color: hsl( var(--clr-white) / 1);
+}
+
+.tab-list {
+    gap: 2rem;
+}
+
+.dot-indicators > * {
+    cursor: pointer;
+    border: 0;
+    border-radius: 50%;
+    aspect-ratio: 1;
+    padding: .5em;
+    background-color: hsl( var(--clr-white) / .25);
+}
+
+.dot-indicators > button:hover,
+.dot-indicators > button:focus {
+    background-color: hsl( var(--clr-white) / .5);
+}
+
+.dot-indicators > [aria-selected="true"] {
+    background-color: hsl( var(--clr-white) / 1);
+}
+
+.number-indicators > * {
+    cursor: pointer;
+    border: 0;
+    width: 4.5rem;
+    border-radius: 50%;
+    aspect-ratio: 1;
+    /* padding: 2.5rem; */
+    margin-left: 8rem;
+    border: 1px solid hsl( var(--clr-white) / .25);
+}
+
+.number-indicators > button:hover,
+.number-indicators > button:focus {
+    border-color: hsl( var(--clr-white) / 1);
+    background-color: hsl( var(--clr-dark));
+    color: hsl( var(--clr-white) / 1);
+}
+
+.number-indicators > [aria-selected="true"] {
+    background-color: hsl( var(--clr-white) / 1);
+    color: hsl( var(--clr-dark));
 }
