--- a/style.css
+++ b/style.css
@@ -661,6 +661,7 @@ body {
 .grid-container--destination > picture {
   grid-area: image;
   max-width: 60%;
+  align-self: start;
 }
 
 .grid-container--destination > .tab-list {
@@ -766,8 +767,7 @@ body {
       ". image tabs ."
       ". image content .";
   }
-  .grid-container--destination > picture,
-  .grid-container--crew > picture {
+  .grid-container--destination > picture {
     max-width: 90%;
   }
   .destination-meta {
@@ -776,6 +776,11 @@ body {
     justify-content: start;
   }
   .grid-container--crew {
+    grid-template-columns: minmax(1rem, 1fr) minmax(0, 40rem) minmax(0, 20rem) minmax(
+        1rem,
+        1fr
+      );
+    justify-items: start;
     grid-template-areas:
       ". title title ."
       ". content image ."
@@ -786,6 +791,8 @@ body {
     justify-self: start;
   }
   .grid-container--crew > picture {
+    grid-column: span 2;
+    max-width: 80%;
     align-self: end;
   }
 }
